css/style.css
* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}
body {
  background-color: #0d0d0d;
  color: #f9f6f6 !important;
}
.cursor-pointer {
  cursor: pointer;
}
/* End Glopal Styling */
/* Start Sidebar */
.sidebar-menu {
  z-index: 999;
  height: 100%;
}
.sidebar-menu .sidebar-left {
  position: absolute;
  left: -260px;
  width: 260px;
  overflow: hidden;
  padding: 24px;
  background-color: #0d0d0d;
  height: 100%;
}
.sidebar-menu .sidebar-right {
  width: 65px;
  position: relative;
}
.sidebar-menu .sidebar-right .logo {
  width: 50px;
}
.sidebar-menu .sidebar-right .sidebar-open-close {
  font-size: 32px;
  font-weight: 900;
  color: #000;
  cursor: pointer;
}
.sidebar-links ul li {
  position: absolute;
  top: 100px;
  -webkit-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
}
/* End Sidebar */
/* Start Home */
.home .meal-layer {
  width: 100%;
  height: 100%;
  background-color: #f9f6f6ca;
  top: 100%;
  -webkit-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}
.home .meal:hover .meal-layer {
  top: 0;
}
/* End Home */
/* Strat Search */
#searchContainer input::-webkit-input-placeholder {
  color: #666F76 !important;
}
#searchContainer input::-moz-placeholder {
  color: #666F76 !important;
}
#searchContainer input:-ms-input-placeholder {
  color: #666F76 !important;
}
#searchContainer input::-ms-input-placeholder {
  color: #666F76 !important;
}
#searchContainer input::placeholder {
  color: #666F76 !important;
}
/* End Search */
/* Start Loading Screen */
.loading-screen{
  z-index: 999;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
.inner-loading-screen{
  position: absolute;
  z-index: 9;
  background-color: #0D0D0D;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
/* End Loading Screen */
/* Strat Media Query */
@media (max-width: 768px) {
  .container {
    width: 87%;
    margin-left: 15%;
  }
}
/* End Media Query */

